# hydro_ingest

./: .gitignore  Cargo.toml  README.md
examples/: basic_migration.rs  counter_hydro.rs  echo_lines_hydro.rs  hello_world_hydro.rs  interactive_hello_hydro.rs  mixed_io_hydro.rs  syn_hello_world.rs
generator/: Cargo.toml
generator/src/: main.rs
src/: counter_hydro.rs  echo_lines_hydro.rs  hello_world_hydro.rs  interactive_hello_hydro.rs  io_transformer.rs  legacy_hello_world.rs  lib.rs  mixed_io_hydro.rs  syn_hello_world.rs  syn_transformer.rs  transformer.rs
src/legacy/: counter.rs  echo_lines.rs  interactive_hello.rs  mixed_io.rs  mod.rs
template/: Cargo.toml
template/examples/: counter_test.rs  generated_example.rs.template  hello_world.rs  hello_world_test.rs
template/src/: counter_test.rs  generated_module.rs.template  hello_world.rs  hello_world_test.rs  lib.rs
tests/: equivalence_tests.rs
