[package]
name = "hydro-template"
publish = false
version = "0.0.0"
edition = "2024"

[dependencies]
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_std = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
stageleft = "0.9.4"

[build-dependencies]
stageleft_tool = "0.9.4"

[dev-dependencies]
ctor = "0.2"
hydro_deploy = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main", features = [
    "deploy",
    "viz",
] }
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1.3", default-features = false }
futures = "0.3.0"

[lints.clippy]
uninlined_format_args = "allow"
