[package]
name = "hydro-template"
publish = false
version = "0.0.0"
edition = "2024"

[dependencies]
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_std = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
stageleft = "0.9.4"

[build-dependencies]
stageleft_tool = "0.9.4"

# Dev dependencies will be added when needed for generated tests
[dev-dependencies]
hydro_deploy = { git = "https://github.com/hydro-project/hydro.git", branch = "main" }
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", branch = "main", features = ["deploy"] }
tokio = { version = "1.29.0", features = ["full"] }

[lints.clippy]
uninlined_format_args = "allow"
